Bug 1089705 - Replace "assert" with "MOZ_ASSERT" in some media code. r=dholbert