dom/media/gmp-plugin/gmp-test-decryptor.cpp
@@ -12,8 +12,8 @@
 #include <istream>
 #include <iterator>
 #include <sstream>
-#include <assert.h>
 
+#include "mozilla/Assertions.h"
 #include "mozilla/Attributes.h"
 #include "mozilla/NullPtr.h"
 
@@ -36,7 +36,7 @@ MaybeFinish()
 FakeDecryptor::FakeDecryptor()
   : mCallback(nullptr)
 {
-  assert(!sInstance);
+  MOZ_ASSERT(!sInstance);
   sInstance = this;
 }
 
@@ -49,7 +49,7 @@ void FakeDecryptor::DecryptingComplete()
 void
 FakeDecryptor::Message(const std::string& aMessage)
 {
-  assert(sInstance);
+  MOZ_ASSERT(sInstance);
   const static std::string sid("fake-session-id");
   sInstance->mCallback->SessionMessage(sid.c_str(), sid.size(),
                                        (const uint8_t*)aMessage.c_str(), aMessage.size(),
